[gd_scene load_steps=8 format=3 uid="uid://djhecvj0b8bi3"]

[ext_resource type="Script" uid="uid://d0aoranvogxru" path="res://mobs/mob_logic.gd" id="1_mgsp5"]
[ext_resource type="Script" uid="uid://drusfxr0h0mbr" path="res://mobs/mob_interact.gd" id="2_mgsp5"]
[ext_resource type="PackedScene" uid="uid://w7lrsklx047t" path="res://items/dog_poop.tscn" id="2_pnkqr"]
[ext_resource type="Texture2D" uid="uid://dtabyad5thsju" path="res://textures/gremlin.png" id="3_pnkqr"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_kqu6x"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_oul6g"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rkbax"]

[node name="Gremlin" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_mgsp5")
poop = ExtResource("2_pnkqr")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
layers = 3
mesh = SubResource("CapsuleMesh_kqu6x")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_oul6g")

[node name="MobInteract" type="ShapeCast3D" parent="." groups=["player_hitbox"]]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 1.51686, 0)
shape = SubResource("CapsuleShape3D_rkbax")
script = ExtResource("2_mgsp5")

[node name="MobInventory" type="Node3D" parent="."]

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(4.865, 0, 0, 0, 4.865, 0, 0, 0, 4.865, 0, 0, 0)
billboard = 2
texture_filter = 0
texture = ExtResource("3_pnkqr")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="AttentionSpan" type="Timer" parent="."]

[connection signal="timeout" from="AttentionSpan" to="." method="_on_attention_span_timeout"]
